# johdatus-koneoppimiseen-kurssi

./: README.md  docker-compose-docs.yml
.github/workflows/: deploy-pages.yml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: .nav.yml  index.md
docs/docs/weeks/: 35_entry.md  37_entry.md  38_entry.md  41_entry.md  42_entry.md  43_entry.md  44_entry.md
