[project]
name = "oppimispaivakirja-johdatus-koneoppimiseen-2025"
version = "0.42.0"
description = "A script dependency helper for student learning diary."
readme = "README.md"
requires-python = ">=3.12,<4.0"

authors = [
    { name = "Reko Suonsivu" }
]

dependencies = [
    "mkdocs-material",
    "mkdocs-awesome-nav"
]
